# claude-code-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Claude.local.md  README.md  pyproject.toml  run_tests.sh  sample_deployment.md
prompts/: debug_claude.md  debug_gemini.md
scripts/: claude-profile.sh  install.sh  run_tests.sh
src/: api.py  authenticator.py  config.py  converters.py  models.py  server.py  streaming.py  utils.py
tests/: test_authenticator.py  test_converters.py  test_server.py  test_tool_schemas.py
